# tray

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  regex_test.cpp  test_avx.cpp
args/: Makefile  args.cpp  args.h  test.cpp
cmake/: FindSDL2.cmake
doc/: FILTERS.md  Filters.md  Geometry.md  Lights.md  MATERIALS.md  Materials.md  Primitives.md  RENDERERS.md  Renderers.md  Samplers.md  Textures.md  Volumes.md
include/: block_queue.h  cache.h  driver.h  load_scene.h  memory_pool.h  mesh_preprocess.h  scene.h
include/accelerators/: bvh.h  kd_point_tree.h
include/film/: camera.h  cie_vals.h  color.h  render_target.h
include/filters/: box_filter.h  filter.h  gaussian_filter.h  lanczos_sinc_filter.h  mitchell_filter.h  triangle_filter.h
include/geometry/: bbox.h  box.h  cone.h  cylinder.h  dbg_tri.h  differential_geometry.h  disk.h  geometry.h  hitinfo.h  plane.h  sphere.h  tri_mesh.h
include/integrator/: bidir_path_integrator.h  emission_integrator.h  path_integrator.h  photon_map_integrator.h  single_scattering_integrator.h  surface_integrator.h  volume_integrator.h  whitted_integrator.h
include/lights/: README.md  ambient_light.h  area_light.h  direct_light.h  light.h  occlusion_tester.h  pbr_light.h  pbr_point_light.h  point_light.h
include/linalg/: README.md  animated_transform.h  matrix4.h  point.h  quaternion.h  ray.h  transform.h  util.h  vector.h
include/loaders/: async_loader.h  load_filter.h  load_light.h  load_material.h  load_renderer.h  load_sampler.h  load_scene.h  load_texture.h  load_volume.h
include/material/: README.md  anisotropic_distribution.h  blinn_distribution.h  blinn_phong.h  bsdf.h  btdf_adapter.h  bxdf.h  flat_material.h  fresnel.h  glass_material.h  lambertian.h  material.h  matte_material.h  merl_brdf.h  merl_material.h  metal_material.h  microfacet_distribution.h  mix_material.h  oren_nayer.h  pbr_material.h  plastic_material.h  scaled_bxdf.h  specular_metal_material.h  specular_reflection.h  specular_transmission.h  torrance_sparrow.h  translucent_material.h
include/monte_carlo/: distribution1d.h  util.h
include/render/: camera.h  color.h  render_target.h
include/renderer/: renderer.h
include/samplers/: adaptive_sampler.h  ld_sampler.h  sampler.h  stratified_sampler.h  uniform_sampler.h
previewer/: README.md  gl_core_3_3.c  previewer.cpp  util.cpp
prj1/: .ycm_extra_conf.py  CMakeLists.txt  README.md
prj1/include/: args.h  driver.h  load_scene.h  scene.h
prj1/include/geometry/: box.h  geometry.h  geometry_cache.h  sphere.h
prj1/include/linalg/: matrix4.h  point.h  ray.h  transform.h  util.h  vector.h
prj1/include/render/: camera.h  render_target.h
prj1/include/samplers/: sampler.h
prj1/previewer/: CMakeLists.txt  gl_core_3_3.h  previewer.cpp  previewer.h  util.cpp  util.h
prj1/scenes/: box_scene.xml  debug.xml
prj1/src/: CMakeLists.txt  args.cpp  driver.cpp  load_scene.cpp  main.cpp  scene.cpp
prj1/src/geometry/: CMakeLists.txt  box.cpp  geometry.cpp  plane.cpp  sphere.cpp
prj1/src/linalg/: CMakeLists.txt  matrix4.cpp  transform.cpp
prj1/src/render/: CMakeLists.txt  camera.cpp  render_target.cpp
prj1/src/samplers/: sampler.cpp
scenes/: box_scene.xml  caustic_playground.xml  cornell.xml  cornell_covered_light.xml  cornell_merl_models.xml  cornell_spotlights.xml  dbg_mesh.xml  debug_tri.xml  final_project.xml  killeroo_cornell.xml  sample_dbg.xml  smallpt_cornell.xml  smallpt_fabric.xml  spec_trans_dbg.xml  sphere_stack.xml  teatime.xml  volume_test.xml
scenes/prj1/: scene.xml
src/: CMakeLists.txt  args.cpp  block_queue.cpp  driver.cpp  load_scene.cpp  main.cpp  memory_pool.cpp  mesh_preprocess.cpp  scene.cpp
src/accelerators/: CMakeLists.txt  bvh.cpp
src/film/: CMakeLists.txt  camera.cpp  cie_vals.cpp  color.cpp  render_target.cpp
src/filters/: CMakeLists.txt  box_filter.cpp  gaussian_filter.cpp  lanczos_sinc_filter.cpp  mitchell_filter.cpp  triangle_filter.cpp
src/geometry/: CMakeLists.txt  box.cpp  cone.cpp  cylinder.cpp  dbg_tri.cpp  differential_geometry.cpp  disk.cpp  geometry.cpp  geometry_cache.cpp  hitinfo.cpp  plane.cpp  sphere.cpp  tri_mesh.cpp
src/integrator/: CMakeLists.txt  bidir_path_integrator.cpp  emission_integrator.cpp  path_integrator.cpp  photon_map_integrator.cpp  single_scattering_integrator.cpp  surface_integrator.cpp  whitted_integrator.cpp
src/lights/: CMakeLists.txt  ambient_light.cpp  area_light.cpp  direct_light.cpp  light.cpp  occlusion_tester.cpp  pbr_light.cpp  pbr_point_light.cpp  point_light.cpp
src/linalg/: CMakeLists.txt  animated_transform.cpp  matrix4.cpp  quaternion.cpp  ray.cpp  transform.cpp
src/loaders/: CMakeLists.txt  load_filter.cpp  load_light.cpp  load_material.cpp  load_renderer.cpp  load_sampler.cpp  load_scene.cpp  load_texture.cpp  load_volume.cpp
src/material/: CMakeLists.txt  anisotropic_distribution.cpp  blinn_distribution.cpp  blinn_phong.cpp  bsdf.cpp  btdf_adapter.cpp  bxdf.cpp  flat_material.cpp  fresnel.cpp  glass_material.cpp  lambertian.cpp  matte_material.cpp  merl_brdf.cpp  merl_material.cpp  metal_material.cpp  microfacet_distribution.cpp  mix_material.cpp  oren_nayer.cpp  plastic_material.cpp  scaled_bxdf.cpp  specular_metal_material.cpp  specular_reflection.cpp  specular_transmission.cpp  torrance_sparrow.cpp  translucent_material.cpp
src/monte_carlo/: CMakeLists.txt  distribution1d.cpp  util.cpp
src/render/: CMakeLists.txt  camera.cpp  color.cpp  render_target.cpp
src/renderer/: CMakeLists.txt  renderer.cpp
src/samplers/: CMakeLists.txt  adaptive_sampler.cpp  ld_sampler.cpp  sampler.cpp  stratified_sampler.cpp  uniform_sampler.cpp
src/textures/: CMakeLists.txt  cem_env_mapping.cpp  checkerboard_texture.cpp  constant_texture.cpp  image_texture.cpp  mipmap.cpp  remapped_texture.cpp  scale_texture.cpp  spherical_mapping.cpp  texture_mapping.cpp  uv_mapping.cpp  uv_texture.cpp
src/volume/: CMakeLists.txt  exponential_volume.cpp  geometry_volume.cpp  grid_volume.cpp  homogeneous_volume.cpp  varying_density_volume.cpp  volume.cpp  volume_node.cpp
tinyxml2/: README.md  tinyxml2.cpp  tinyxml2.h
(+38 files in other folders)
